Replace deprecated new URL constructors in appserv-tests servlet-3.0 (more batches)
Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>