@@ -67,8 +67,8 @@ public class WebTest {
         BufferedReader input = null;
 
         try {
-            URL url = new URL("http://" + host  + ":" + port +
-                contextRoot + "/TestServlet");
+            URL url = URI.create("http://" + host  + ":" + port +
+                contextRoot + "/TestServlet").toURL();
             System.out.println("Connecting to: " + url.toString());
 
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
