@@ -75,7 +75,7 @@ public class WebTest {
         String url = "http://" + host + ":" + port + contextRoot +
             "/webFragment1Servlet";
         HttpURLConnection conn = (HttpURLConnection)
-            (new URL(url)).openConnection();
+            URI.create(url).toURL().openConnection();
         int code = conn.getResponseCode();
         if (code != 200) {
             throw new Exception("Unexpected return code: " + code);
@@ -83,7 +83,7 @@ public class WebTest {
 
         url = "http://" + host + ":" + port + contextRoot +
             "/webFragment2Servlet";
-        conn = (HttpURLConnection) (new URL(url)).openConnection();
+        conn = (HttpURLConnection) URI.create(url).toURL().openConnection();
         code = conn.getResponseCode();
         if (code != 200) {
             throw new Exception("Unexpected return code: " + code);
