@@ -65,7 +65,7 @@ public class WebTest {
                      + root;
         System.out.println("Invoking " + url);
         HttpURLConnection conn = (HttpURLConnection)
-            (new URL(url)).openConnection();
+            URI.create(url).toURL().openConnection();
 
         int code = conn.getResponseCode();
         if (code != 200) {
