@@ -74,7 +74,7 @@ public class WebTest {
 
         String url = "http://" + host + ":" + port + contextRoot + "/test";
         HttpURLConnection conn = (HttpURLConnection)
-            (new URL(url)).openConnection();
+            URI.create(url).toURL().openConnection();
         int code = conn.getResponseCode();
         if (code != 200) {
             throw new Exception("Unexpected return code: " + code);
